Use ImmutableList#of instead of List#of
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symex-smg-refactoring@45575 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c